[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.0",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.2.0",
    "scipy>=1.16.0",
    "streamlit-sortables>=0.3.1",
    "streamlit>=1.46.1",
    "websocket>=0.2.1",
    "aiohttp>=3.12.13",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "cryptography>=45.0.5",
    "requests>=2.32.4",
    "vadersentiment>=3.3.2",
    "websocket-client>=1.8.0",
]
